fixed resume a bit, added table border and separator color for dark mode

--- a/src/styles/dark-theme.scss
+++ b/src/styles/dark-theme.scss
@@ -88,4 +88,13 @@ body.dark {
   .thumbnail-date {
     color: $dark-link-color;
   }
+
+  td,
+  th {
+    border-bottom: 1px solid $dark-table-border-color;
+  }
+
+  hr {
+    background: $dark-separator-background;
+  }
 }
