--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -60,3 +60,6 @@ $dark-category-text-color: #d8d7d7;
 
 $dark-category-highlight-border-color: #666;
 $dark-category-highlight-text-color: #fff;
+
+$dark-table-border-color: rgba(255, 255, 255, 0.4);
+$dark-separator-background: hsla(360, 100%, 100%, 0.5);
